--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<!--  <app-root></app-root>-->
+<app-ngrx-app-component></app-ngrx-app-component>
 </body>
 </html>
